#time 2h 0m adding new team members and cropping photos

--- a/site/index.html
+++ b/site/index.html
@@ -489,10 +489,10 @@
                         </div>
                         <div class="team-portraits__item">
                             <div class="team-portraits__item--inner">
-                                <div class="team-portraits__item--image -bret"></div>
+                                <div class="team-portraits__item--image -kori"></div>
                                 <div class="team-portraits__item--bio">
-                                    <div class="-name">Bret Cox</div>
-                                    <div class="-position">CEO</div>
+                                    <div class="-name">Kori Handy</div>
+                                    <div class="-position">Lead Designer</div>
                                     <div class="-contact-icons">
                                         <a href="#" target="_blank">
                                             <img src="static/images/icons/icon-team-true.svg" />    
@@ -509,10 +509,10 @@
                         </div>
                         <div class="team-portraits__item">
                             <div class="team-portraits__item--inner">
-                                <div class="team-portraits__item--image -bret"></div>
+                                <div class="team-portraits__item--image -jer"></div>
                                 <div class="team-portraits__item--bio">
-                                    <div class="-name">Bret Cox</div>
-                                    <div class="-position">CEO</div>
+                                    <div class="-name">Jeremy Kotai</div>
+                                    <div class="-position">Senior iOS Engineer</div>
                                     <div class="-contact-icons">
                                         <a href="#" target="_blank">
                                             <img src="static/images/icons/icon-team-true.svg" />    
@@ -529,10 +529,10 @@
                         </div>
                         <div class="team-portraits__item">
                             <div class="team-portraits__item--inner">
-                                <div class="team-portraits__item--image -bret"></div>
+                                <div class="team-portraits__item--image -helen"></div>
                                 <div class="team-portraits__item--bio">
-                                    <div class="-name">Bret Cox</div>
-                                    <div class="-position">CEO</div>
+                                    <div class="-name">Helen Floersh</div>
+                                    <div class="-position">Content Manager</div>
                                     <div class="-contact-icons">
                                         <a href="#" target="_blank">
                                             <img src="static/images/icons/icon-team-true.svg" />    
@@ -549,10 +549,10 @@
                         </div>
                         <div class="team-portraits__item">
                             <div class="team-portraits__item--inner">
-                                <div class="team-portraits__item--image -bret"></div>
+                                <div class="team-portraits__item--image -ryan"></div>
                                 <div class="team-portraits__item--bio">
-                                    <div class="-name">Bret Cox</div>
-                                    <div class="-position">CEO</div>
+                                    <div class="-name">Ryan Cox</div>
+                                    <div class="-position">Director of Operations</div>
                                     <div class="-contact-icons">
                                         <a href="#" target="_blank">
                                             <img src="static/images/icons/icon-team-true.svg" />    
@@ -569,10 +569,10 @@
                         </div>
                         <div class="team-portraits__item">
                             <div class="team-portraits__item--inner">
-                                <div class="team-portraits__item--image -bret"></div>
+                                <div class="team-portraits__item--image -petra"></div>
                                 <div class="team-portraits__item--bio">
-                                    <div class="-name">Bret Cox</div>
-                                    <div class="-position">CEO</div>
+                                    <div class="-name">Petra Hanson</div>
+                                    <div class="-position">Designer</div>
                                     <div class="-contact-icons">
                                         <a href="#" target="_blank">
                                             <img src="static/images/icons/icon-team-true.svg" />    
@@ -589,10 +589,10 @@
                         </div>
                         <div class="team-portraits__item">
                             <div class="team-portraits__item--inner">
-                                <div class="team-portraits__item--image -bret"></div>
+                                <div class="team-portraits__item--image -alex"></div>
                                 <div class="team-portraits__item--bio">
-                                    <div class="-name">Bret Cox</div>
-                                    <div class="-position">CEO</div>
+                                    <div class="-name">Alex Fedosseev</div>
+                                    <div class="-position">Vice President, Marketing</div>
                                     <div class="-contact-icons">
                                         <a href="#" target="_blank">
                                             <img src="static/images/icons/icon-team-true.svg" />    
@@ -609,10 +609,10 @@
                         </div>
                         <div class="team-portraits__item">
                             <div class="team-portraits__item--inner">
-                                <div class="team-portraits__item--image -bret"></div>
+                                <div class="team-portraits__item--image -roman"></div>
                                 <div class="team-portraits__item--bio">
-                                    <div class="-name">Bret Cox</div>
-                                    <div class="-position">CEO</div>
+                                    <div class="-name">Roman Dobrõnin</div>
+                                    <div class="-position">Backend Software Developer</div>
                                     <div class="-contact-icons">
                                         <a href="#" target="_blank">
                                             <img src="static/images/icons/icon-team-true.svg" />    
@@ -629,10 +629,10 @@
                         </div>
                         <div class="team-portraits__item">
                             <div class="team-portraits__item--inner">
-                                <div class="team-portraits__item--image -bret"></div>
+                                <div class="team-portraits__item--image -pjotr"></div>
                                 <div class="team-portraits__item--bio">
-                                    <div class="-name">Bret Cox</div>
-                                    <div class="-position">CEO</div>
+                                    <div class="-name">Pjotr Mjakošin</div>
+                                    <div class="-position">Vice President, Engineering</div>
                                     <div class="-contact-icons">
                                         <a href="#" target="_blank">
                                             <img src="static/images/icons/icon-team-true.svg" />    
@@ -649,10 +649,150 @@
                         </div>
                         <div class="team-portraits__item">
                             <div class="team-portraits__item--inner">
-                                <div class="team-portraits__item--image -bret"></div>
+                                <div class="team-portraits__item--image -juri"></div>
                                 <div class="team-portraits__item--bio">
-                                    <div class="-name">Bret Cox</div>
-                                    <div class="-position">CEO</div>
+                                    <div class="-name">Juri Bojarski</div>
+                                    <div class="-position">Quality Assurance Engineer</div>
+                                    <div class="-contact-icons">
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-true.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-linkedin.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-twitter.svg" />    
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-portraits__item">
+                            <div class="team-portraits__item--inner">
+                                <div class="team-portraits__item--image -dmitri"></div>
+                                <div class="team-portraits__item--bio">
+                                    <div class="-name">Dmitri Maruhh</div>
+                                    <div class="-position">Backend Server Engineer</div>
+                                    <div class="-contact-icons">
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-true.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-linkedin.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-twitter.svg" />    
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-portraits__item">
+                            <div class="team-portraits__item--inner">
+                                <div class="team-portraits__item--image -ahmed"></div>
+                                <div class="team-portraits__item--bio">
+                                    <div class="-name">Ahmed Abdelhady</div>
+                                    <div class="-position">Backend Software Engineer</div>
+                                    <div class="-contact-icons">
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-true.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-linkedin.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-twitter.svg" />    
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-portraits__item">
+                            <div class="team-portraits__item--inner">
+                                <div class="team-portraits__item--image -ilya"></div>
+                                <div class="team-portraits__item--bio">
+                                    <div class="-name">Ilja Radjuhhin</div>
+                                    <div class="-position">Senior iOS Engineer</div>
+                                    <div class="-contact-icons">
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-true.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-linkedin.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-twitter.svg" />    
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-portraits__item">
+                            <div class="team-portraits__item--inner">
+                                <div class="team-portraits__item--image -rustam"></div>
+                                <div class="team-portraits__item--bio">
+                                    <div class="-name">Rustam Nadrshin</div>
+                                    <div class="-position">Engineering Manager</div>
+                                    <div class="-contact-icons">
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-true.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-linkedin.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-twitter.svg" />    
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-portraits__item">
+                            <div class="team-portraits__item--inner">
+                                <div class="team-portraits__item--image -stanislav"></div>
+                                <div class="team-portraits__item--bio">
+                                    <div class="-name">Stanislav Mistsenko</div>
+                                    <div class="-position">Senior Software Engineer</div>
+                                    <div class="-contact-icons">
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-true.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-linkedin.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-twitter.svg" />    
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-portraits__item">
+                            <div class="team-portraits__item--inner">
+                                <div class="team-portraits__item--image -oxana"></div>
+                                <div class="team-portraits__item--bio">
+                                    <div class="-name">Oxana Nebis</div>
+                                    <div class="-position">Quality Assurance Manager</div>
+                                    <div class="-contact-icons">
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-true.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-linkedin.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-twitter.svg" />    
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-portraits__item">
+                            <div class="team-portraits__item--inner">
+                                <div class="team-portraits__item--image -anna"></div>
+                                <div class="team-portraits__item--bio">
+                                    <div class="-name">Anna Iokhimovich</div>
+                                    <div class="-position">Development Project Manager</div>
                                     <div class="-contact-icons">
                                         <a href="#" target="_blank">
                                             <img src="static/images/icons/icon-team-true.svg" />    
