--- a/site/index.html
+++ b/site/index.html
@@ -14,9 +14,9 @@
         <link rel="shortcut icon" href="https://s3.amazonaws.com/shyftassets/images/favicon.png" type="image/x-icon">
         <link rel="icon" href="https://s3.amazonaws.com/shyftassets/images/favicon.png" type="image/x-icon">
         -->
-        <script src="static/js/vendors.js?cache=bust7"></script>
+        <script src="static/js/vendors.js?cache=bust8"></script>
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-        <link rel="stylesheet" href="static/css/styles.css?cache=bust7">
+        <link rel="stylesheet" href="static/css/styles.css?cache=bust8">
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -60,16 +60,19 @@
                             <a href="#" data-scroll-to="whatIsTrue" class="top-nav__link">How it works</a>
                         </li>
                         <li class="top-nav__item">
-                            <a href="#" data-scroll-to="theTeam" class="top-nav__link">Token Sale</a>
+                            <a href="#" data-scroll-to="features" class="top-nav__link">Features</a>
+                        </li>
+                        <li class="top-nav__item">
+                            <a href="#" data-scroll-to="tokenSale" class="top-nav__link">Token Sale</a>
                         </li>
                         <li class="top-nav__item">
                             <a href="#" data-scroll-to="theRoadmap" class="top-nav__link">Roadmap</a>
                         </li>
                         <li class="top-nav__item">
-                            <a href="#" data-scroll-to="theTeam" class="top-nav__link">Team</a>
+                            <a href="#" data-scroll-to="theNews" class="top-nav__link">News</a>
                         </li>
                         <li class="top-nav__item">
-                            <a href="#" data-scroll-to="theNews" class="top-nav__link">News</a>
+                            <a href="#" data-scroll-to="theTeam" class="top-nav__link">Team</a>
                         </li>
                         <li class="top-nav__item">
                             <a href="#" data-scroll-to="downloadApp" class="top-nav__link">Try True</a>
@@ -78,6 +81,10 @@
                             <a href="#" class="button-topnav">Whitepaper</a>
                         </li>
                     </ul>
+                    <div class="mobile-nav-toggle">
+                        <img class="-open" src="static/images/icons/icon-hamburger.svg" />
+                        <img class="-close" src="static/images/icons/icon-close.svg" />
+                    </div>
                     
                 </nav>
 
@@ -214,15 +221,15 @@
 
             </section>
 
-            <section class="home-video">
-                <div class="home-video__container">
+            <section class="home-video__container">
                     <div id="whatIsTrue" class="home-video__header">How It Works</div>
-                    <video width="714" height="407" controls poster="static/images/poster.png">
-                        <source src="static/video/true-intro.mp4" type="video/mp4">
-                        <source src="movie.ogg" type="video/ogg">
-                        Your browser does not support the video tag.
-                    </video>
-                </div>
+                    <div class="home-video">
+                        <video width="714" height="407" controls poster="static/images/poster.png">
+                            <source src="static/video/true-intro.mp4" type="video/mp4">
+                            <source src="movie.ogg" type="video/ogg">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
             </section>
             <section class="social-media">
                 <div class="social-media__row">
@@ -254,7 +261,7 @@
             </section>
 
             <section class="home-main-features">
-                <h2>Features</h2>
+                <h2 id="features">Features</h2>
                 <div class="phone-carousel">
                     <div class="phone-item phone-1">
                         <img src="static/images/features/phone-3.png" />
@@ -305,7 +312,7 @@
                 </div>
             </section>
             <section class="download-cta">
-                <h2>Try True & See The Difference</h2>
+                <h2 id="tokenSale">Try True & See The Difference</h2>
                 <a href="#"><img src="static/images/buttons/button-appstore.png" width="157" /></a>
                 <a href="#"><img src="static/images/buttons/button-google-play.png" width="157" /></a>
             </section>
@@ -904,11 +911,6 @@
                     <a href="#"><img src="static/images/buttons/button-appstore.png" width="157" /></a>
                     <a href="#"><img src="static/images/buttons/button-google-play.png" width="157" /></a>
                 </div>
-                <!-- <img class="site-footer__phone" src="static/images/phone.png" /> -->
-                <div class="site-footer__bg5"></div>
-                <div class="site-footer__bg4"></div>
-                <div class="site-footer__bg3"></div>
-                <div class="site-footer__bg2"></div>
                 <div class="site-footer__bg"></div>
                 <footer class="true-footer">
                     <div class="footer-social">
@@ -937,6 +939,6 @@
             </section>
         </div>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-        <script src="static/js/app.js?cache=bust7"></script>
+        <script src="static/js/app.js?cache=bust8"></script>
     </body>
 </html>
